[tool.poetry]
name = "deep-reinforcement-in-autonomous-driving"
version = "1.0.0"
description = "Deep reinforcement learning in autonomous driving."
authors = ["Asad Idrees Razak <idreesshaikh6300@gmail.com>"]
readme = "README.md"
packages = [{include = "deep_reinforcement_in_autonomous_driving"}]

[tool.poetry.dependencies]
python = "^3.10"
tensorboard = "^2.10.0"
# Using a version range allows Poetry to find a torch version that works with Python 3.10
torch = ">=1.12.0,<1.13.0"
torchvision = ">=0.13.0,<0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"